0.9.3/_sources/gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_read_nmr_topspin.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/nmr/plot_read_nmr_topspin.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_read_nmr_topspin.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_read_nmr_topspin.py:


NMR: reading TopSpin files (plugin)
=====================================

This example shows how to read Bruker TopSpin NMR files using the
optional ``spectrochempy-nmr`` plugin.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 20-22

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 23-25

``read_topspin`` is registered under the ``scp.nmr`` plugin namespace.
The top-level ``scp.read_topspin`` alias is kept for compatibility.

.. GENERATED FROM PYTHON SOURCE LINES 25-34

.. code-block:: default


    ds = scp.nmr.read_topspin(
        scp.preferences.datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d",
        expno=1,
        remove_digital_filter=True,
    )
    print(f"Loaded dataset: {ds}")
    print(f"Shape: {ds.shape}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Loaded dataset: NDDataset: [complex128] pp (size: 12411)
    Shape: (12411,)




.. GENERATED FROM PYTHON SOURCE LINES 35-36

Plot the spectrum:

.. GENERATED FROM PYTHON SOURCE LINES 36-39

.. code-block:: default


    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/sphx_glr_plot_read_nmr_topspin_001.png
   :alt: plot read nmr topspin
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/nmr/images/sphx_glr_plot_read_nmr_topspin_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-43

If the plugin is not installed, the function or method raises a
:class:`~spectrochempy.plugins.deps.MissingPluginError` with installation
instructions.

.. GENERATED FROM PYTHON SOURCE LINES 43-45

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.105 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_nmr_plot_read_nmr_topspin.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_nmr_topspin.py <plot_read_nmr_topspin.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_nmr_topspin.ipynb <plot_read_nmr_topspin.ipynb>`
